# rustical

./: README.md
homework-01/: Cargo.toml
homework-01/src/: main.rs
homework-02/: Cargo.toml
homework-02/src/: main.rs
homework-05/: Cargo.toml  test-csv
homework-05/src/: main.rs
homework-07/: Cargo.toml  test.csv
homework-07/src/: main.rs  supplier.rs  transformer.rs
homework-09/: .gitignore  Cargo.toml
homework-09/src/: client.rs  main.rs  server.rs  util.rs
homework-11/client/src/: main.rs  stream_handler.rs
homework-11/common/src/: util.rs
homework-11/server/src/: config.rs  file.rs  stream_handler.rs
homework-13/: .gitignore  Cargo.toml  README.md
homework-13/client/: Cargo.toml
homework-13/client/src/: client_error.rs  command.rs  main.rs  stream_handler.rs
homework-13/common/: Cargo.toml
homework-13/common-proc-macro/src/: lib.rs
homework-13/common/src/: cli.rs  lib.rs  message.rs  util.rs
homework-13/docs/diagram/: comm-seq.puml  crate-dep.puml
homework-13/server/: Cargo.toml
homework-13/server/src/: command.rs  config.rs  file.rs  main.rs  server_error.rs  stream_handler.rs
homework-16/: README.md
homework-16/client/src/: client_error.rs  command.rs  main.rs  stream_handler.rs
homework-16/common/: Cargo.toml
homework-16/common-proc-macro/: Cargo.toml
homework-16/common-proc-macro/src/: lib.rs
homework-16/common/src/: cli.rs  lib.rs  message.rs  test.rs  util.rs
homework-16/server/: Cargo.toml
homework-16/server/src/: command.rs  config.rs  file.rs  main.rs  server_error.rs  stream_handler.rs  test.rs
