[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
common-proc-macro = { version = "0.1.0", path = "../common-proc-macro" }
common = { version = "0.1.0", path = "../common" }
chrono = "0.4.39"
lazy_static = "1.5.0"
regex = "1.11.1"
image = "0.25.5"
thiserror = "1.0.69"
anyhow = "1.0.96"
serde_json = "1.0.140"
uuid = { version = "1.15.1", features = ["v4"] }
base64 = "0.22.1"
log = "0.4.26"
