[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
common-proc-macro = { version = "0.1.0", path = "../common-proc-macro" }
clap = "4.5.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
hostname = "0.4.0"
base64 = "0.22.1"

[dev-dependencies]
tempfile = "3.19.1"
assert_cmd = "2.0.16"
